--- a/style.css
+++ b/style.css
@@ -21,11 +21,16 @@ header {
 a {
     text-decoration: none;
     color: white;
+    font-size: 40px;
 }
 
 ul li {
     list-style: none;
+}
+
+ul {
     display: flex;
+    gap: 30px;
 }
 
 svg {
