--- a/style.css
+++ b/style.css
@@ -14,27 +14,38 @@
 header {
     display: flex;
     width: 100vw;
+    height: 150px;
     background-color: transparent;
     background-color: black;
+    align-items: center;
+    justify-content: space-around;
 }
 
 a {
     text-decoration: none;
     color: white;
-    font-size: 40px;
+    font-size: 35px;
+    transition: 1s;
+}
+
+a:hover {
+    text-shadow: 5px 10px 30px rgb(151, 213, 251);
+    transition: .5s;
 }
 
 ul li {
     list-style: none;
+    margin-bottom: 15px;
 }
 
 ul {
     display: flex;
+    
     gap: 30px;
 }
 
 svg {
     margin-left: 30px;
-    width: 55%;
+    width: 50%;
     color: white;
 }
